implemented the Image picker
adds image to display from user device

--- a/ImageRecognition/Info.plist
+++ b/ImageRecognition/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key> Privacy - Camera Usage Description</key>
+	<string>Image recognition needs access to your camera to allow photo capture</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
